# FinStack

./: .gitignore  CMakeLists.txt  README.md  UML.md  loginwindow.cpp  loginwindow.h  main.cpp
include/: AppController.h
include/database/: DatabaseManager.cpp  DatabaseManager.h
include/models/: Budget.h  RecurringTransaction.h  SavingGoal.cpp  SavingGoal.h  SavingsGoal.h  Transaction.h  User.h
include/services/: AnalyticsService.h  AuthService.h  BaseService.h  BudgetService.h  GoalService.h  RecurringTransactionService.h  ReportService.h  TransactionService.h
include/ui/: AnalyticsWindow.h  BaseWindow.h  BudgetWindow.h  DashboardWindow.h  DepositWindow.h  ForgotPassword.h  LoginWindow.h  ProfileWindow.h  RecoveryCodeDialog.h  RecurringTransactionWindow.h  RegisterWindow.h  SavingsGoalWindow.h  TransactionHistory.h  TransactionWindow.h  WithdrawWindow.h
include/utils/: Formatter.h  InsightEngine.h  Validator.h
resources/: resources.qrc
resources/styles/: app.qss
src/: AppController.cpp  main.cpp
src/database/: DatabaseManager.cpp
src/models/: Budget.cpp  RecurringTransaction.cpp  SavingsGoal.cpp  Transaction.cpp  User.cpp
src/services/: AnalyticsService.cpp  AuthService.cpp  BudgetService.cpp  GoalService.cpp  RecurringTransactionService.cpp  ReportService.cpp  TransactionService.cpp
src/ui/: AnalyticsWindow.cpp  BaseWindow.cpp  BudgetWindow.cpp  DashboardWindow.cpp  DepositWindow.cpp  ForgotPassword.cpp  LoginWindow.cpp  ProfileWindow.cpp  RecoveryCodeDialog.cpp  RecurringTransactionWindow.cpp  RegisterWindow.cpp  SavingsGoalWindow.cpp  TransactionHistory.cpp  TransactionWindow.cpp  WithdrawWindow.cpp
src/utils/: Formatter.cpp  InsightEngine.cpp  Validator.cpp
